<resources>
    <string name="app_name">GeekRoomPrototype</string>
    <string name="splash_tv_title"><![CDATA[<geek_room/>]]></string>
    <string name="b_login">Login</string>
    <string name="b_register">Register</string>
    <string name="auth_et_username_hint">Username</string>
    <string name="auth_et_password_hint">Password</string>
    <string name="menu_nav_main_menu_feed">Feed</string>
    <string name="menu_nav_main_menu_search">Search</string>
    <string name="menu_nav_main_menu_messenger">Messenger</string>
    <string name="menu_nav_main_menu_profile">Profile</string>
    <string name="cd_profile_iv_avatar">Change avatar</string>
    <string name="profile_b_logout">Logout</string>
    <string name="toast_in_development">Feature in development</string>
    <string name="tv_content_is_loading">. . .</string>
    <string name="feed_tv_fresh">Fresh articles</string>
    <string name="cd_b_new_article">New article</string>
    <string name="new_article_et_title_hint">Title of your article</string>
    <string name="new_article_et_content_hint">Content...</string>
    <string name="new_article_b_publish">Publish</string>
    <string name="listitem_article_likes_ph">%s likes</string>
    <string name="listitem_article_date_ph_sec">%d seconds ago</string>
    <string name="listitem_article_date_ph_minutes">%d minutes ago</string>
    <string name="listitem_article_date_ph_hours">%d hours ago</string>
    <string name="listitem_article_date_ph_days">%d days ago</string>
    <string name="listitem_article_date_ph_weeks">%d weeks ago</string>
    <string name="listitem_article_date_ph_months">%d months ago</string>
    <string name="listitem_article_date_ph_years">%d years ago</string>
    <string name="messenger_tv_no_chats">You have no chats</string>
    <string name="cd_b_new_chat">New chat</string>
    <string name="new_chat_tv_title_hint">Title of new chat</string>
    <string name="new_chat_b_create">Create chat</string>
    <string name="chat_b_send">Send</string>
    <string name="chat_et_message_hint">Message</string>
    <string name="author_tag_ph">\@%s</string>
</resources>